--- a/src/client/index.css
+++ b/src/client/index.css
@@ -18,7 +18,7 @@
 	background: #fafafa;
 	margin-left: 10%;
 	margin-right: 10%;
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -106,7 +106,7 @@
 	background: #fafafa;
 	margin-left: 10px;
 	margin-right: 10px;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .recommendation-summary {
